# rcalc

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rcalc-test.yml
src/: cli.rs  main.rs  parser.rs  symbols.rs  utils.rs
src/ast/: atom.rs  binary.rs  expr.rs  function.rs  mod.rs  unary.rs
src/visitor/: base.rs  eval.rs  jit.rs  mod.rs  printer.rs
