[package]
name = "rcalc"
version = "0.1.0"
authors = ["Nyakku Shigure <sigure.qaq@gmail.com>"]
description = "A simple calculator."
license = "MIT"
edition = "2021"

[features]
jit = ["inkwell"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
inkwell = { version = "0.4.0", features = ["llvm17-0"], optional = true }
peg = "0.8.2"
