[package]
name = "rcalc"
version = "0.1.0"
authors = ["Nyakku Shigure <sigure.qaq@gmail.com>"]
description = "A simple calculator."
license = "MIT"
edition = "2021"

[features]
jit = ["inkwell"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
inkwell = { version = "0.5.0", features = ["llvm18-0"], optional = true }
peg = "0.8.3"
